examples/test/testpolicy18689.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18689
  namespace: namespace2
spec:
  podSelector:
    matchLabels:
      key20: value18
      key12: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value4
          key33: value2
      podSelector:
        matchLabels:
          key46: value43
